# magic_guns

./: .gitignore  Cargo.toml  README.md
assets/shader/: colored_mesh2d.wgsl
assets/shaders/: basic.wgsl  custom.wgsl
magic_guns/: Cargo.toml
magic_guns/src/: bullets.rs  camera.rs  cursor.rs  gltf.rs  lib.rs  main.rs  map.rs  player.rs  setup.rs  states.rs
map_editor/: Cargo.toml
map_editor/src/: base.rs  camera.rs  custom_shader.rs  keyboard_events.rs  main.rs  math.rs  mouse_events.rs  ui.rs
shared/: Cargo.toml
shared/src/: custom_shader.rs  lib.rs  materials.rs  math.rs  meshes.rs
