[package]
name = "magic_guns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.0"
bevy-inspector-egui = "0.25.1"
bevy_egui = "0.28.0"
bevy_rapier3d = "0.27.0"
shared = { path = "../shared" }
