[package]
name = "map_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

bevy = "0.12.1"
bevy_egui = "0.24.0"
bevy_rapier2d = "0.23.0"
delaunator = "1.0.2"
rkyv = { version = "0.7.43", features = ["validation"] }
rand = "0.8.5"
log = "0.4.20"
simple_logger = "4.3.3"
